--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,14 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <meta charset="utf-8">
-  <title>App bombers de Palma</title>
-  <base href="/">
+    <meta charset="utf-8">
+    <title>App bombers de Palma</title>
+    <base href="/">
 
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="assets/Logo.jpg">
+    <meta content="width=device-width, initial-scale=1" name="viewport">
+    <link href="assets/Logo.jpg" rel="icon" type="image/x-icon">
 </head>
 <body>
-  <app-root></app-root>
+<app-root></app-root>
 </body>
 </html>
